add: login,logout,registration,insert appointments

--- a/appointments/templates/base.html
+++ b/appointments/templates/base.html
@@ -50,8 +50,8 @@
   <!-- Side navigation -->
   <div class="sidenav">
     <a href="/">Home</a>
-    <a href="/show">View</a>
-    <a href="/register">Create</a>
+    <a href="/view">View</a>
+    <a href="/create">Create</a>
   </div>
 
   <!-- Page content -->
