--- a/appointments/templates/views.html
+++ b/appointments/templates/views.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-  {% for td in user.todolist.all %}
-    <p><a href="/{{td.id}}">{{td.name}}</a></p>
+  {% for td in user.car.all %}
+    <p>{{td.car_model}}</p>
   {% endfor %}
 {%endblock%}
