--- a/appointments/templates/staff.html
+++ b/appointments/templates/staff.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %} Show content {% endblock %}
+{% block title %} View {% endblock %}
+
 
 {% block content %}
   <div class="container">
 
-    <h1>Cars</h1>
+    <h1>TOTAL CARS</h1>
     {% if object_pk and object_car_model %}
     <h2>
       Bienvenido a la pagina del carro {{object_car_model}} con pk {{object_pk}}, age: {{object_age}}
@@ -16,7 +17,7 @@
 
     <h2>List of Car objects</h2>
     {% for car_model, values in car_dict.items %}
-      <a href="{% url 'show' values.pk %}">
+      <a href="{% url 'staff' values.pk %}">
         <h3>
           {{car_model}} with pk: {{values.pk}}, year {{values.year}}
         </h3>
