No se permiten horarios iguales

--- a/appointments/templates/create.html
+++ b/appointments/templates/create.html
@@ -9,9 +9,9 @@ Create New car
 {% block content %}
 <div class="container">
 
-	<h1>Create new car</h1>
+	<h1>Crear una nueva cita</h1>
 
-	<h2>Hola</h2>
+	<h2>Ingrese los datos de su auto</h2>
 
 	<form action="{% url 'create' %}" method="post">
 		{% csrf_token %}
