--- a/appointments/templates/show.html
+++ b/appointments/templates/show.html
@@ -5,20 +5,20 @@
 {% block content %}
   <div class="container">
 
-    <h1>Cars</h1>
-    {% if object_pk and object_car_model %}
+    <h1>Citas actuales</h1>
+    {% if object_brand and object_car_model %}
     <h2>
-      Bienvenido a la pagina del carro {{object_car_model}} con pk {{object_pk}}, age: {{object_age}}
+      Bienvenido a la pagina del carro marca {{object_brand}}, modelo {{object_car_model}}}
     </h2>
     {%else%}
 
 
 
-    <h2>List of Car objects</h2>
-    {% for car_model, values in car_dict.items %}
+    <h2>Lista de autos por atender</h2>
+    {% for car_brand, values in car_dict.items %}
       <a href="{% url 'show' values.pk %}">
         <h3>
-          {{car_model}} with pk: {{values.pk}}, year {{values.year}}
+          {{car_brand}} with pk: {{values.pk}}, year {{values.year}}
         </h3>
       </a>
     {% endfor %}
