--- a/appointments/templates/create.html
+++ b/appointments/templates/create.html
@@ -21,7 +21,7 @@ Create New car
 			{% render_field field class="form-control" %}
 		</div>
 		{% endfor %}
-		<input type="submit" value="New Car Object">
+		<input type="submit" value="Añadir cita">
 
 	</form>
 
