--- a/appointments/templates/new.html
+++ b/appointments/templates/new.html
@@ -14,7 +14,7 @@
       </div>
       {% endfor %}
 
-      <input type="submit" value="New Car Object">
+      <input type="submit" value="Añadir cita">
 
 
     </form>
