--- a/appointments/templates/show.html
+++ b/appointments/templates/show.html
@@ -8,17 +8,16 @@
     <h1>Citas actuales</h1>
     {% if object_brand and object_car_model and object_year %}
     <h2>
-      Bienvenido a la pagina del carro marca {{object_brand}}, modelo {{object_car_model}}, año {{object_year}}
+      Bienvenido a la pagina del {{object_brand}} {{object_car_model}} del {{object_year}}
     </h2>
     {%else%}
 
 
-
     <h2>Lista de autos por atender</h2>
-    {% for car_brand, values in car_dict.items %}
+    {% for car_pk, values in car_dict.items %}
       <a href="{% url 'show' values.pk %}">
         <h3>
-          {{car_brand}} {{values.pk}}, year {{values.year}}
+          {{values.brand}} {{values.model}}, year {{values.year}}
         </h3>
       </a>
     {% endfor %}
@@ -27,27 +26,3 @@
 {%endblock%}
 
 
-
-<!-- {% load widget_tweaks %}
-
-  <div class="container">
-
-    <h1>Cars</h1>
-    {% if object_pk and object_car_model %}
-    <h2>
-      Bienvenido a la pagina del carro {{object_car_model}} con pk {{object_pk}}, age: {{object_age}}
-    </h2>
-    {%else%}
-
-
-
-    <h2>List of Car objects</h2>
-    {% for car_model, values in car_dict.items %}
-      <a href="{% url 'show' values.pk %}">
-        <h3>
-          {{car_model}} with pk: {{values.pk}}, year {{values.year}}
-        </h3>
-      </a>
-    {% endfor %}
-    {% endif %}
-  </div> -->
