--- a/appointments/templates/views.html
+++ b/appointments/templates/views.html
@@ -4,7 +4,8 @@
 
 
 {% block content %}
+  <h1>Tus citas</h1>
   {% for td in user.car.all %}
-    <h2>{{td.brand}} {{td.car_model}}</h2>
+    <h2>{{td.brand}} {{td.car_model}}. Cita el {{td.day}} a las {{td.schedule}}</h2>
   {% endfor %}
 {%endblock%}
