--- a/appointments/templates/home.html
+++ b/appointments/templates/home.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %} View {% endblock %}
+{% block title %} Taller MemoCardo {% endblock %}
 
 
 {% block content %}
-  <p><a href="/login">LOGIN</a></p>
-  <p><a href="/logout">LOGOUT</a></p>
-  <p><a href="/register">REGISTER NEW USER</a></p>
+  <p><a href="/login">Iniciar sesión</a></p>
+  <p><a href="/logout">Cerrar sesión</a></p>
+  <p><a href="/register">Registrarse</a></p>
 {%endblock%}
