--- a/appointments/templates/views.html
+++ b/appointments/templates/views.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} View {% endblock %}
+{% block title %} Citas {% endblock %}
 
 {% block content %}
   <div class="container">
