Problema de los mecánicos resuelto

--- a/appointments/templates/base.html
+++ b/appointments/templates/base.html
@@ -52,6 +52,7 @@
     <a href="/">Inicio</a>
     <a href="/view">Citas</a>
     <a href="/create">Crear</a>
+    <a href="/staff">Mecánicos</a>
   </div>
 
   <!-- Page content -->
