--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Create An account {% endblock %}
+{% block title %} Crear una cuenta{% endblock %}
 
 {% load crispy_forms_tags %}
 
