--- a/appointments/templates/staff.html
+++ b/appointments/templates/staff.html
@@ -9,11 +9,22 @@
     <h1>Lista de autos por atender</h1>
     {% if brand and car_model and year and pk and user%}
       <h2>
-        Cita pendiente del {{brand}} {{car_model}} del {{year}}, 
+        Cita pendiente del {{brand}} {{car_model}} del {{year}},
         con identificador {{pk}} y
-        propiedad de {{user}}. 
+        propiedad de {{user}}.
         Mecánico encargado {{provider}}
       </h2>
+    <a href="{% url 'create' pk %}">
+      <h3>
+        MODIFICAR
+      </h3>
+    </a>
+
+    <a href="{% url 'delete' pk %}">
+      <h3>
+        ELIMINAR
+      </h3>
+    </a>
 
     {%else%}
 
@@ -22,7 +33,7 @@
           <h3>
             {{values.brand}} {{values.car_model}}, year {{values.year}}
           </h3>
-        </a>  
+        </a>
       {% endfor %}
     {% endif %}
   </div>
