Modificaciones en las notas para mensajes y otros

--- a/appointments/templates/change.html
+++ b/appointments/templates/change.html
@@ -9,7 +9,7 @@ Crear nueva cita
 {% block content %}
 <div class="container">
 
-	<h1>Crear una nueva cita</h1>
+	<h1>Modificar cita</h1>
 
 	<h3>{{ note }}</h3>
 
