Fecha funcionando bien

--- a/appointments/templates/views.html
+++ b/appointments/templates/views.html
@@ -10,7 +10,8 @@
 
     <h2>
       <br> Usted tiene una cita pendiente, para un {{brand}} {{car_model}} del {{year}} <br>
-      <br> Horario: {{day}}, {{schedule}} <br>
+      <br> Fecha: {{date}} <br>
+      <br> Hora: {{schedule}} <br>
       <br> Mecánico encargado: {{provider}} <br> <br>
     </h2>
     <a href="{% url 'create' pk %}">
