--- a/appointments/templates/home.html
+++ b/appointments/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %} Taller MemoCardo {% endblock %}
+{% block title %}
+Taller MemoCardo
+{% endblock %}
 
 {% block content %}
 
