--- a/appointments/templates/views.html
+++ b/appointments/templates/views.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %} Citas {% endblock %}
+{% block title %}
+Citas
+{% endblock %}
 
 {% block content %}
   <div class="container">
