add: Staff registration

--- a/appointments/templates/home.html
+++ b/appointments/templates/home.html
@@ -8,6 +8,8 @@ Taller MemoCardo
 
   <p><a href="/login">Iniciar sesión</a></p>
   <p><a href="/logout">Cerrar sesión</a></p>
-  <p><a href="/register">Registrarse</a></p>
+  <p><a href="/register">Registrarse como cliente</a></p>
+  <p><a href="/registerstaff">Registrarse como mecanico</a></p>
+
 
 {%endblock%}
