--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %} Crear una cuenta{% endblock %}
+{% block title %}
+Crear una cuenta
+{% endblock %}
 
 {% load crispy_forms_tags %}
 
