--- a/appointments/templates/available.html
+++ b/appointments/templates/available.html
@@ -1,31 +1,78 @@
-{% extends "base.html" %}
+{% load static %}
+<!DOCTYPE HTML>
+<!--
+	Road Trip by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
+<html>
+	<head>
+		<title>Avaliable</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+	</head>
+	<body class="subpage">
 
-{% block title %}
-Citas no disponibles
-{% endblock %}
+		<!-- Header -->
+			<header id="header">
+				<div class="logo"><a href="/">Taller MemoCardo </a></div>
+				<a href="#menu"><span>Menu</span></a>
+			</header>
 
-{% block content %}
-  <div class="container">
+			<!-- Nav -->
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="/">Inicio</a></li>
+					<li><a href="/view">Citas</a></li>
+					<li><a href="/create">Crear cita</a></li>
+				</ul>
+			</nav>
 
-    <h1>Citas actualmente no disponibles</h1>
+		<!-- Content -->
+		<!--
+			Note: To show a background image, set the "data-bg" attribute below
+			to the full filename of your image. This is used in each section to set
+			the background image.
+		-->
+			<section id="post" class="wrapper bg-img" data-bg="banner2.jpg">
+				<div class="inner">
+					<article class="box">
+						<header>
+							<h2>Citas no disponibles</h2>
+							<p>Citas actualmente no disponibles</p>
+						</header>
+							{% for pk, user in user_dict.items %}
+					        <h2>
+					        {{user.first_name}} {{user.last_name}}
+					        </h2>
 
-    {% for pk, user in user_dict.items %}
-        <h2>
-        {{user.first_name}} {{user.last_name}}
-        </h2>
+					        {% for pk, car in car_dict.items %}
+					          {% if user.user_name == car.provider %}
 
-        {% for pk, car in car_dict.items %}
-          {% if user.user_name == car.provider %}
+					            <h4>
+					              {{car.date}}, {{car.schedule}}
+					            </h4>
 
-            <h4>
-              {{car.date}}, {{car.schedule}}
-            </h4>
+					          {% endif %}
+					        {% endfor %}
 
-          {% endif %}
-        {% endfor %}
+					    {% endfor %}
 
-    {% endfor %}
-  
-  </div>
+						</div>
+					</article>
+				</div>
+			</section>
 
-{% endblock %}
+
+
+		<!-- Scripts -->
+		<script src="{% static 'js/jquery.min.js' %}"></script>"
+		<script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
+		<script src="{% static 'js/jquery.scrollex.min.js' %}"></script>
+		<script src="{% static 'js/skel.min.js' %}"></script>
+		<script src="{% static 'js/util.js' %}"></script>
+		<script src="{% static 'js/main.js' %}"></script>
+
+	</body>
+</html>
