--- a/appointments/templates/create.html
+++ b/appointments/templates/create.html
@@ -1,40 +1,83 @@
-{% extends 'base.html' %}
+{% load static %}
 {% load widget_tweaks %}
+<!DOCTYPE HTML>
+<!--
+	Road Trip by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
+<html>
+	<head>
+		<title>Create</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+	</head>
+	<body class="subpage">
 
-{% block title %}
-Crear nueva cita
-{% endblock %}
+		<!-- Header -->
+			<header id="header">
+				<div class="logo"><a href="/">Taller MemoCardo </a></div>
+				<a href="#menu"><span>Menu</span></a>
+			</header>
+
+			<!-- Nav -->
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="/">Inicio</a></li>
+						<li><a href="/view">Citas</a></li>
+						<li><a href="/create">Crear cita</a></li>
+					</ul>
+				</nav>
+
+		<!-- Content -->
+		<!--
+			Note: To show a background image, set the "data-bg" attribute below
+			to the full filename of your image. This is used in each section to set
+			the background image.
+		-->
+			<section id="post" class="wrapper bg-img" data-bg="banner2.jpg">
+				<div class="inner">
+					<article class="box">
+						<header>
+							<h1>Crear una nueva cita</h1>
+  						<h3>{{ note }}</h3>
+						</header>
+
+
+						<a href="{% url 'available' %}">
+							<h5>
+								Citas no disponibles
+							</h5>
+							</a>
+
+						<form action="{% url 'create' %}" method="post">
+							{% csrf_token %}
+							{% for field in carform%}
+							<div class="form-group">
+								{{field.label_tag}}
+								{% render_field field class="form-control" %}
+							</div>
+							{% endfor %}
+							<input type="submit" value="Añadir cita">
+
+						</form>
+
+
+						</div>
+					</article>
+				</div>
+			</section>
 
 
 
-{% block content %}
-<div class="container">
+		<!-- Scripts -->
+		<script src="{% static 'js/jquery.min.js' %}"></script>"
+		<script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
+		<script src="{% static 'js/jquery.scrollex.min.js' %}"></script>
+		<script src="{% static 'js/skel.min.js' %}"></script>
+		<script src="{% static 'js/util.js' %}"></script>
+		<script src="{% static 'js/main.js' %}"></script>
 
-	<h1>Crear una nueva cita</h1>
-
-	<h3>{{ note }}</h3>
-
-	<a href="{% url 'available' %}">
-		<h5>
-		  Citas no disponibles
-		</h5>
-	  </a>
-
-	<form action="{% url 'create' %}" method="post">
-		{% csrf_token %}
-		{% for field in carform%}
-		<div class="form-group">
-			{{field.label_tag}}
-			{% render_field field class="form-control" %}
-		</div>
-		{% endfor %}
-		<input type="submit" value="Añadir cita">
-
-	</form>
-
-
-</div>
-
-
-
-{% endblock %}
+	</body>
+</html>
