--- a/appointments/templates/staff.html
+++ b/appointments/templates/staff.html
@@ -1,42 +1,95 @@
-{% extends "base.html" %}
+{% load static %}
+{% load widget_tweaks %}
+<!DOCTYPE HTML>
+<!--
+	Road Trip by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
+<html>
+	<head>
+		<title>Staff</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+	</head>
+	<body class="subpage">
 
-{% block title %}
-Mecánico
-{% endblock %}
+		<!-- Header -->
+			<header id="header">
+				<div class="logo"><a href="/">Taller MemoCardo </a></div>
+				<a href="#menu"><span>Menu</span></a>
+			</header>
+
+			<!-- Nav -->
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="/">Inicio</a></li>
+						<li><a href="/view">Citas</a></li>
+						<li><a href="/create">Crear cita</a></li>
+					</ul>
+				</nav>
+
+		<!-- Content -->
+		<!--
+			Note: To show a background image, set the "data-bg" attribute below
+			to the full filename of your image. This is used in each section to set
+			the background image.
+		-->
+			<section id="post" class="wrapper bg-img" data-bg="banner2.jpg">
+				<div class="inner">
+					<article class="box">
+						<header>
+							<h1>Lista de autos por atender</h1>
+						</header>
 
 
-{% block content %}
-  <div class="container">
+							{% if brand and car_model %}
+								<h2>
+									<br> Cita pendiente de atender: {{brand}} {{car_model}} del {{year}} <br>
+									<br> Identificador: {{pk}} <br>
+									<br> Fecha: {{date}} <br>
+									<br> Propiedad de {{user}} <br> <br>
+								</h2>
+							<a href="{% url 'create' pk %}">
+								<h3>
+									Modificar
+								</h3>
+							</a>
 
-    <h1>Lista de autos por atender</h1>
-    {% if brand and car_model %}
-      <h2>
-        <br> Cita pendiente de atender: {{brand}} {{car_model}} del {{year}} <br>
-        <br> Identificador: {{pk}} <br>
-        <br> Fecha: {{date}} <br>
-        <br> Propiedad de {{user}} <br> <br>
-      </h2>
-    <a href="{% url 'create' pk %}">
-      <h3>
-        Modificar
-      </h3>
-    </a>
+							<a href="{% url 'delete' pk %}">
+								<h3>
+									Eliminar
+								</h3>
+							</a>
 
-    <a href="{% url 'delete' pk %}">
-      <h3>
-        Eliminar
-      </h3>
-    </a>
+							{%else%}
 
-    {%else%}
+								{% for car_pk, values in car_dict.items %}
+									<a href="{% url 'staff' values.pk %}">
+										<h3>
+											{{values.brand}} {{values.car_model}}, year {{values.year}}
+										</h3>
+									</a>
+								{% endfor %}
+							{% endif %}
 
-      {% for car_pk, values in car_dict.items %}
-        <a href="{% url 'staff' values.pk %}">
-          <h3>
-            {{values.brand}} {{values.car_model}}, year {{values.year}}
-          </h3>
-        </a>
-      {% endfor %}
-    {% endif %}
-  </div>
-{%endblock%}
+
+
+						</div>
+					</article>
+				</div>
+			</section>
+
+
+
+		<!-- Scripts -->
+		<script src="{% static 'js/jquery.min.js' %}"></script>"
+		<script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
+		<script src="{% static 'js/jquery.scrollex.min.js' %}"></script>
+		<script src="{% static 'js/skel.min.js' %}"></script>
+		<script src="{% static 'js/util.js' %}"></script>
+		<script src="{% static 'js/main.js' %}"></script>
+
+	</body>
+</html>
