--- a/appointments/templates/views.html
+++ b/appointments/templates/views.html
@@ -1,53 +1,106 @@
-{% extends "base.html" %}
+{% load static %}
+{% load widget_tweaks %}
+<!DOCTYPE HTML>
+<!--
+	Road Trip by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
+<html>
+	<head>
+		<title>Views</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+	</head>
+	<body class="subpage">
 
-{% block title %}
-Citas
-{% endblock %}
+		<!-- Header -->
+			<header id="header">
+				<div class="logo"><a href="/">Taller MemoCardo </a></div>
+				<a href="#menu"><span>Menu</span></a>
+			</header>
 
-{% block content %}
-  <div class="container">
+			<!-- Nav -->
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="/">Inicio</a></li>
+						<li><a href="/view">Citas</a></li>
+						<li><a href="/create">Crear cita</a></li>
+					</ul>
+				</nav>
 
-    <h1>Citas actuales</h1>
-    {% if brand and car_model %}
-
-    <h2>
-      <br> Usted tiene una cita pendiente, para un {{brand}} {{car_model}} del {{year}} <br>
-      <br> Fecha: {{date}} <br>
-      <br> Hora: {{schedule}} <br>
-      <br> Mecánico encargado: {{provider}} <br> <br>
-    </h2>
-    <a href="{% url 'create' pk %}">
-      <h3>
-        Modificar
-      </h3>
-    </a>
-
-    <a href="{% url 'delete' pk %}">
-      <h3>
-        Eliminar
-      </h3>
-    </a>
+		<!-- Content -->
+		<!--
+			Note: To show a background image, set the "data-bg" attribute below
+			to the full filename of your image. This is used in each section to set
+			the background image.
+		-->
+			<section id="post" class="wrapper bg-img" data-bg="banner2.jpg">
+				<div class="inner">
+					<article class="box">
+						<header>
+							<h1>Citas actuales</h1>
+						</header>
 
 
-    {% else %}
 
-      {% if note %}
 
-      <h3>
-        {{note}}
-      </h3>
+				    {% if brand and car_model %}
 
-      {%endif%}
+				    <h2>
+				      <br> Usted tiene una cita pendiente, para un {{brand}} {{car_model}} del {{year}} <br>
+				      <br> Fecha: {{date}} <br>
+				      <br> Hora: {{schedule}} <br>
+				      <br> Mecánico encargado: {{provider}} <br> <br>
+				    </h2>
+				    <a href="{% url 'create' pk %}">
+				      <h3>
+				        Modificar
+				      </h3>
+				    </a>
 
-      {% for td in user.car.all %}
-        <a href="{% url 'view' td.pk %}">
-          <h3>
-            {{td.brand}} {{td.car_model}}, año {{td.year}}
-          </h3>
-        </a>
-      {% endfor %}
+				    <a href="{% url 'delete' pk %}">
+				      <h3>
+				        Eliminar
+				      </h3>
+				    </a>
 
-    {% endif %}
-  </div>
 
-{%endblock%}
+				    {% else %}
+
+				      {% if note %}
+
+				      <h3>
+				        {{note}}
+				      </h3>
+
+				      {%endif%}
+
+				      {% for td in user.car.all %}
+				        <a href="{% url 'view' td.pk %}">
+				          <h3>
+				            {{td.brand}} {{td.car_model}}, año {{td.year}}
+				          </h3>
+				        </a>
+				      {% endfor %}
+
+				    {% endif %}
+
+						</div>
+					</article>
+				</div>
+			</section>
+
+
+
+		<!-- Scripts -->
+		<script src="{% static 'js/jquery.min.js' %}"></script>"
+		<script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
+		<script src="{% static 'js/jquery.scrollex.min.js' %}"></script>
+		<script src="{% static 'js/skel.min.js' %}"></script>
+		<script src="{% static 'js/util.js' %}"></script>
+		<script src="{% static 'js/main.js' %}"></script>
+
+	</body>
+</html>
