--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -1,15 +1,69 @@
-{% extends "base.html" %}
-
-{% block title %}
-Crear una cuenta
-{% endblock %}
-
+{% load static %}
+{% load widget_tweaks %}
 {% load crispy_forms_tags %}
+<!DOCTYPE HTML>
+<!--
+	Road Trip by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
+<html>
+	<head>
+		<title>Register</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+	</head>
+	<body class="subpage">
 
-{% block content %}
-  <form method="POST" class="form-group">
-    {% csrf_token %}
-    {{form|crispy}}
-    <button type="submit" class="btn btn-success">Register</button>
-  </form>
-{%endblock%}
+		<!-- Header -->
+			<header id="header">
+				<div class="logo"><a href="/">Taller MemoCardo </a></div>
+				<a href="#menu"><span>Menu</span></a>
+			</header>
+
+			<!-- Nav -->
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="/">Inicio</a></li>
+						<li><a href="/view">Citas</a></li>
+						<li><a href="/create">Crear cita</a></li>
+					</ul>
+				</nav>
+
+		<!-- Content -->
+		<!--
+			Note: To show a background image, set the "data-bg" attribute below
+			to the full filename of your image. This is used in each section to set
+			the background image.
+		-->
+			<section id="post" class="wrapper bg-img" data-bg="banner2.jpg">
+				<div class="inner">
+					<article class="box">
+						<header>
+							<h1>Registrar usuario</h1>
+						</header>
+
+						<form method="POST" class="form-group">
+							{% csrf_token %}
+							{{form|crispy}}
+							<button type="submit" class="btn btn-success">Register</button>
+						</form>
+
+
+					</article>
+				</div>
+			</section>
+
+
+
+		<!-- Scripts -->
+		<script src="{% static 'js/jquery.min.js' %}"></script>"
+		<script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
+		<script src="{% static 'js/jquery.scrollex.min.js' %}"></script>
+		<script src="{% static 'js/skel.min.js' %}"></script>
+		<script src="{% static 'js/util.js' %}"></script>
+		<script src="{% static 'js/main.js' %}"></script>
+
+	</body>
+</html>
