--- a/appointments/templates/views.html
+++ b/appointments/templates/views.html
@@ -52,7 +52,7 @@
 				      <br> Usted tiene una cita pendiente, para un {{brand}} {{car_model}} del {{year}} <br>
 				      <br> Fecha: {{date}} <br>
 				      <br> Hora: {{schedule}} <br>
-				      <br> Mecánico encargado: {{provider}} <br> <br>
+				      <br> Mecánico encargado: {{provider_f_n}} {{provider_l_n}} <br> <br>
 				    </h2>
 				    <a href="{% url 'create' pk %}">
 				      <h3>
