--- a/appointments/templates/index.html
+++ b/appointments/templates/index.html
@@ -51,7 +51,7 @@
 					<article class="box">
 						<header>
 							<h2>El mejor servicio al mejor precio</h2>
-							<p>Sus mecanicos de confianza desde 1980</p>
+							<p>Sus mecánicos de confianza desde 1980</p>
 						</header>
 						<div class="content">
 
@@ -59,7 +59,7 @@
 							  <h4><a href="/logoutuser">Cerrar sesión</a></h4>
 							  <h4><a href="/register">Registrarse como cliente</a></h4>
 							  {% if request.user.is_staff %}
-							    <h4><a href="/registerstaff">Registrarse como mecanico</a></h4>
+							    <h4><a href="/registerstaff">Registrar mecánico</a></h4>
 							  {%endif%}
 
 
